fixed video url

--- a/video1.html
+++ b/video1.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<video width="500" height="330" style="background-color: crimson; display:inline-block" id="video" loop="" muted="" src="1468324182.mp4" autoplay controls></video>
+<video width="500" height="330" style="background-color: crimson; display:inline-block" id="video" loop="" muted="" src="https://gene7299.github.io/test/1468324182.mp4" autoplay controls></video>
 
 
 <script type="text/javascript">
