remove app cache

--- a/loop1/index.html
+++ b/loop1/index.html
@@ -1,4 +1,4 @@
-<html manifest="loop.appcache">
+<html>
 <head>
 <title>HTML5 Video</title>
     <script src="jquery-2.2.1.min.js" type="text/javascript"></script>
