--- a/4ktest/4k02.html
+++ b/4ktest/4k02.html
@@ -6,7 +6,7 @@
 
 </head>
 <body style="border-style: 0px;margin:0px">
-<img id="myvideo" src="4k02.jpg" onclick="openFullscreen();"/>
+<img id="myvideo" src="4k02.jpg" onclick="openFullscreen();"  ontouchstart="openFullscreen();"/>
 <script>
 /* Get the element you want displayed in fullscreen mode (a video in this example): */
 var elem = document.getElementById("myvideo");
