--- a/4kvideoweb/video.html
+++ b/4kvideoweb/video.html
@@ -210,7 +210,7 @@
 <body>
 
 
-<video id="myVideo" onended="onVideoEnded();" style="width:100%;" type='video/mp4' loop onclick="openFullscreen();"></video>
+<video id="myVideo" onended="onVideoEnded();" style="width:100%;" type='video/mp4' loop onclick="openFullscreen();" ontouchstart="openFullscreen();"></video>
 <div id="videoloader"></video>
 <script type="text/javascript">
 
