--- a/4kvideoweb/video.html
+++ b/4kvideoweb/video.html
@@ -210,7 +210,7 @@
 <body>
 
 
-<video id="myVideo" onended="onVideoEnded();" style="width:100%;" type='video/mp4' loop onclick="openFullscreen();" ontouchstart="openFullscreen();"></video>
+<video id="myVideo" onended="onVideoEnded();" style="width:100%;" type="video/mp4" onclick="openFullscreen();" ontouchstart="openFullscreen();" loop></video>
 <div id="videoloader"></video>
 <script type="text/javascript">
 
@@ -342,6 +342,7 @@ async function playVideo(i){
 }
 function onVideoPlay(){
 	console.log("start video playing");
+	openFullscreen();
 	//document.getElementById("myVideo").webkitRequestFullScreen();
 }
 
@@ -382,17 +383,17 @@ function dataURItoBlob(dataURI) {
 /* When the openFullscreen() function is executed, open the video in fullscreen.
 Note that we must include prefixes for different browsers, as they don't support the requestFullscreen method yet */
 function openFullscreen() {
-  document.getElementById("myVideo").webkitRequestFullScreen();
-  var elem = document.getElementById("myvideo");
-  //if (elem.requestFullscreen) {
-  //  elem.requestFullscreen();
-  //} else if (elem.mozRequestFullScreen) { /* Firefox */
-  //  elem.mozRequestFullScreen();
-  //} else if (elem.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
-  //  elem.webkitRequestFullscreen();
-  //} else if (elem.msRequestFullscreen) { /* IE/Edge */
-  //  elem.msRequestFullscreen();
- // }
+  
+  var elem = document.getElementById("myVideo");
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.mozRequestFullScreen) { /* Firefox */
+    elem.mozRequestFullScreen();
+  } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE/Edge */
+    elem.msRequestFullscreen();
+  }
 }
 
   </script>
