--- a/onetest/LoopVideoHtmlSampleSeamless/index_seamless02poster.html
+++ b/onetest/LoopVideoHtmlSampleSeamless/index_seamless02poster.html
@@ -37,7 +37,7 @@ $(document).ready(function(){
             var videoWidth = client_width;
             var videoHeight = client_height;
             //create video tag if first run and default hide
-            var htmlVideoTag0 =  '<video width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#000 !important" >'
+            var htmlVideoTag0 =  '<video muted width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#000 !important" >'
             var htmlSeamlessCanvas = '<canvas id="videoCanvas" width="'+videoWidth+'px" height="'+videoHeight+'px" style="display:none;background:#000 !important"></canvas>';
 
             $("#content_wrapper").append(htmlVideoTag0);
@@ -104,7 +104,7 @@ $(document).ready(function(){
 </head>
 <body style="margin:0px;background-color:#000000;">
 <div id="content_wrapper" sytle="width:100%;height:100%" ></div>
-<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  Seamless001 (20210916) (a) </div>
+<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSampleV2 </div>
 </video>
 </body>
 </html>
