--- a/onetest/LoopVideoHtmlSampleSeamless/index_two_vidoes.html
+++ b/onetest/LoopVideoHtmlSampleSeamless/index_two_vidoes.html
@@ -68,8 +68,8 @@ $(document).ready(function(){
 
         if(document.getElementById("vid_" + 1 ) == null) {
             //create 2 video tag if first run and default hide
-            var htmlVideoTag1 =  '<video width="'+client_width+'px" height="'+client_height+'px" class="video" id="vid_'+1+'" style="display:none;" >'
-            var htmlVideoTag2 =  '<video width="'+client_width+'px" height="'+client_height+'px" class="video" id="vid_'+2+'" style="display:none;" >'
+            var htmlVideoTag1 =  '<video muted  width="'+client_width+'px" height="'+client_height+'px" class="video" id="vid_'+1+'" style="display:none;" >'
+            var htmlVideoTag2 =  '<video muted  width="'+client_width+'px" height="'+client_height+'px" class="video" id="vid_'+2+'" style="display:none;" >'
             var htmlSeamlessCanvas = '<canvas id="videoCanvas" style="display:none;"></canvas>';
 
             $("#content_wrapper").append(htmlVideoTag1);
@@ -289,7 +289,7 @@ $(document).ready(function(){
 </head>
 <body style="margin:0px;background-color:#00FF00;">
 <div id="content_wrapper" sytle="width:100%;height:100%" ></div>
-<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  Seamless001 (20210916) (a) </div>
+<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSample Two videos </div>
 </video>
 </body>
 </html>
