--- a/onetest/LoopVideoHtmlSampleSeamlessV3/index.html
+++ b/onetest/LoopVideoHtmlSampleSeamlessV3/index.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
             var videoWidth = client_width;
             var videoHeight = client_height;
             //create video tag if first run and default hide
-            var htmlVideoTag0 =  '<video width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#000 !important;object-fit:fill;" >'
+            var htmlVideoTag0 =  '<video muted width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#000 !important;object-fit:fill;" >'
             var htmlSeamlessCanvas = '<canvas id="videoCanvas" width="'+videoWidth+'px" height="'+videoHeight+'px" style="display:none;background:#000 !important;object-fit:fill;"></canvas>';
 
             $("#content_wrapper").append(htmlVideoTag0);
@@ -144,7 +144,7 @@ $(document).ready(function(){
 </head>
 <body style="margin:0px;background-color:#000000;">
 <div id="content_wrapper" sytle="width:100%;height:100%" ></div>
-<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  Seamless001 (20210922) (a) </div>
+<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSampleV3 </div>
 </video>
 </body>
 </html>
