--- a/onetest/LoopVideoHtmlSampleSeamlessV4/index.html
+++ b/onetest/LoopVideoHtmlSampleSeamlessV4/index.html
@@ -157,13 +157,13 @@ $(document).ready(function(){
     },100);
     
 });   
-        
+//for Aggressive CleanUp Enable Chromium 20220408        
 </script>
 
 </head>
 <body style="margin:0px;background-color:#33ff00;">
 <div id="content_wrapper" sytle="width:100%;height:100%" ></div>
-<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSampleV4 for Aggressive CleanUp Enable Chromium 20220408 </div>
+<div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSampleV4  </div>
 </video>
 </body>
 </html>
