--- a/onetest/LoopVideoHtmlSampleSeamless/index_seamless01.html
+++ b/onetest/LoopVideoHtmlSampleSeamless/index_seamless01.html
@@ -33,6 +33,7 @@ $(document).ready(function(){
 
         if(document.getElementById("vid_" + 0 ) == null) {
 
+            console.log("document.getElementById(vid_ + 0 ) == null"); 
             var videoWidth = client_width;
             var videoHeight = client_height;
             //create video tag if first run and default hide
