--- a/onetest/LoopVideoHtmlSampleSeamlessV4/index.html
+++ b/onetest/LoopVideoHtmlSampleSeamlessV4/index.html
@@ -41,8 +41,8 @@ $(document).ready(function(){
             var videoWidth = client_width;
             var videoHeight = client_height;
             //create video tag if first run and default hide
-            var htmlVideoTag0 =  '<video muted width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#FF0 !important;object-fit:fill;" >'
-            var htmlSeamlessCanvas = '<canvas id="videoCanvas" width="'+videoWidth+'px" height="'+videoHeight+'px" style="display:none;background:#0FF !important;object-fit:fill;"></canvas>';
+            var htmlVideoTag0 =  '<video muted width="'+videoWidth+'px" height="'+videoHeight+'px" class="video" id="vid_'+0+'" style="display:none;background:#000 !important;object-fit:fill;" >'
+            var htmlSeamlessCanvas = '<canvas id="videoCanvas" width="'+videoWidth+'px" height="'+videoHeight+'px" style="display:none;background:#000 !important;object-fit:fill;"></canvas>';
 
             $("#content_wrapper").append(htmlVideoTag0);
             $("#content_wrapper").append(htmlSeamlessCanvas);
@@ -51,7 +51,7 @@ $(document).ready(function(){
             var videoCanvas = document.getElementById('videoCanvas');
             var vidCtx = videoCanvas.getContext('2d');
 
-            videoTag0.setAttribute("poster",magenta1PxPoster);
+            videoTag0.setAttribute("poster",black1PxPoster);
             // Video events for videoTag0
             videoTag0.addEventListener("playing", function() {
                 console.log(videoTag0.id + " is playing");
@@ -161,7 +161,7 @@ $(document).ready(function(){
 </script>
 
 </head>
-<body style="margin:0px;background-color:#33ff00;">
+<body style="margin:0px;background-color:#000000;">
 <div id="content_wrapper" sytle="width:100%;height:100%" ></div>
 <div id="version" style="position: absolute; left:100px ; top: 100px; font-size: 40px;background: #FFFFFF;  opacity: 0.8;">  LoopVideoHtmlSampleV4  </div>
 </video>
